More tweaking IDE stuff